<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    tools:context=".fragments.Contact_Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="85dp"
            android:indeterminateTint="@color/black" />

        <ImageView
            android:id="@+id/coverImg"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/coverImg"
            android:layout_margin="20dp"
            android:text="@string/feedback"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/feedback"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/FullName"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_underline_color"
                android:hint="@string/fullname"
                android:inputType="textEmailAddress"
                android:paddingEnd="10dp"
                android:scrollbars="horizontal" />

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_below="@id/FullName"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_underline_color"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingEnd="10dp"
                android:scrollbars="horizontal" />

        </LinearLayout>

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/layout"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/edittext_underline_color"
            android:gravity="top|start"
            android:hint="@string/msg"
            android:inputType="textMultiLine|textCapSentences"
            android:minLines="3"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:scrollbars="vertical"
            android:singleLine="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/messageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/message"
            android:layout_margin="20dp"
            android:background="@drawable/signin_signup_btn"
            android:paddingHorizontal="50dp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@id/messageBtn"
            android:orientation="vertical">


            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:src="@drawable/location" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:text="@string/address2" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:src="@drawable/email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:text="@string/email2" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:src="@drawable/phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:text="@string/phone2" />

        </LinearLayout>


    </RelativeLayout>


</ScrollView>