<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Home_Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/tool"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/marquee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tool"
            android:layout_marginTop="3dp"
            android:background="#318334"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="2dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/marquee"
            android:textColor="#fff"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imageSliderCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/marquee"
            android:layout_margin="14dp"
            app:cardCornerRadius="8dp">

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="right"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorEnabled="true"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="#FFF"
                app:sliderIndicatorUnselectedColor="#5A5A5A"
                app:sliderScrollTimeInSec="3" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/founder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageSliderCardView"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:padding="4dp"
            android:text="@string/founder"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminateTint="@color/black"
            android:layout_below="@+id/founder"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="70dp" />

        <ImageView
            android:id="@+id/founder_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/founder"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/founder_name" />

        <TextView
            android:id="@+id/founder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/founder_image"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:text="@string/founder_name"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/founder_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/founder_name"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/allerta"
            android:padding="5dp"
            android:text="@string/founder_history"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <TextView
            android:id="@+id/about_iimt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/founder_history"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:padding="6dp"
            android:text="@string/about"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_iimt"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/allerta"
            android:padding="5dp"
            android:text="@string/aboutiimt"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <ImageView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_below="@+id/about"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/map_foreground"
            android:contentDescription="@string/map" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/map"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:padding="20dp"
            android:text="@string/address"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black" />
    </RelativeLayout>

</ScrollView>