<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    tools:context=".fragments.Dashboard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:background="@drawable/signin_signup_btn"
                android:paddingHorizontal="50dp"
                android:paddingVertical="15dp"
                android:text="@string/logout"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logout"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="Admission Form"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/text"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/edittext_underline_color"
                android:hint="@string/fullname"
                android:inputType="textPersonName" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="20dp"
                android:layout_below="@id/editTextName"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gender"
                    android:textSize="15.5sp"
                    android:elevation="4dp"
                    android:textColor="@drawable/gender_text"
                    android:paddingHorizontal="30dp"
                    android:button="@android:color/transparent"
                    android:text="Male" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:textSize="15.5sp"
                    android:elevation="4dp"
                    android:background="@drawable/gender"
                    android:textColor="@drawable/gender_text"
                    android:paddingHorizontal="30dp"
                    android:button="@android:color/transparent"
                    android:text="Female" />

            </RadioGroup>


            <EditText
                android:id="@+id/course"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/radioGroup"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext_underline_color"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/course"
                android:inputType="none" />


            <EditText
                android:id="@+id/emailId"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/course"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/edittext_underline_color"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/emailId"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/edittext_underline_color"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="10" />

            <EditText
                android:id="@+id/editTextDOB"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/editTextPhone"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/edittext_underline_color"
                android:hint="@string/dob"
                android:inputType="date" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@id/editTextDOB"
                android:layout_gravity="top|start"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/edittext_underline_color"
                android:gravity="top|start"
                android:hint="@string/usr_address"
                android:inputType="textMultiLine|textCapSentences"
                android:minLines="3"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:scrollbars="vertical"
                android:singleLine="false" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/signin_signup_btn"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="17sp" />


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>