<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/login_background"
    tools:context=".fragments.LoginFragment">

    <ScrollView
        android:id="@+id/scrollbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:id="@+id/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/toolbar_image"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/welcome"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:hintTextColor="@android:color/holo_red_light"
                    app:boxStrokeColor="@android:color/holo_red_light"
                    android:hint="@string/username"
                    app:boxBackgroundColor="#F4EFEF"
                    app:boxStrokeWidth="0.5dp"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/person"
                        android:drawablePadding="10dp"
                        android:inputType="textWebEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:boxStrokeColor="@android:color/holo_red_light"
                    app:hintTextColor="@android:color/holo_red_light"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/password"
                    app:boxBackgroundColor="#F4EFEF"
                    app:boxStrokeWidth="0.5dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/lock"
                        android:drawablePadding="10dp"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/forgotBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginEnd="10dp"
                    android:background="#00000000"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/forgetPassword"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/signin_signup_btn"
                    android:clickable="true"
                    android:elevation="10dp"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:letterSpacing="0.07"
                    android:padding="9dp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <View
                    android:id="@+id/line1"
                    android:layout_width="100dp"
                    android:layout_height="5dp"
                    android:background="@drawable/line" />

                <TextView
                    android:id="@+id/lineText"
                    android:layout_marginHorizontal="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orContinue" />

                <View
                    android:id="@+id/line2"
                    android:layout_width="100dp"
                    android:layout_height="5dp"
                    android:background="@drawable/line" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:clickable="true"
                    android:foreground="@drawable/ripple"
                    android:background="@drawable/icon"
                    android:contentDescription="@string/logo1"
                    android:src="@drawable/google_logo" />

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:foreground="@drawable/ripple"
                    android:clickable="true"
                    android:background="@drawable/icon"
                    android:padding="3dp"
                    android:contentDescription="@string/logo2"
                    android:src="@drawable/apple_logo" />

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:foreground="@drawable/ripple"
                    android:clickable="true"
                    android:background="@drawable/icon"
                    android:padding="3dp"
                    android:src="@drawable/fb_logo"
                    android:contentDescription="@string/logo3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/member" />

                <TextView
                    android:id="@+id/registerBtn"
                    android:layout_width="100dp"
                    android:gravity="center"
                    android:foreground="@drawable/ripple"
                    android:clickable="true"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/register"
                    android:textColor="#2381E4"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>